After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698184 - NMSecretAgent is not introspectable
NMSecretAgent is not introspectable
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: API
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-04-17 10:44 UTC by Martin Pitt
Modified: 2013-04-19 13:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libnm-glib: Make SecretAgent introspectable (4.24 KB, patch)
2013-04-17 11:07 UTC, Martin Pitt
committed Details | Review

Description Martin Pitt 2013-04-17 10:44:12 UTC
/usr/share/gir-1.0/NMClient-1.0.gir:

The vfuncs of NMSecretAgent are not introspectable, and also have wrong types in some cases (like "hints"):

    <class name="SecretAgent"
[...]
      <virtual-method name="get_secrets" introspectable="0">
[...]
          <parameter name="hints" transfer-ownership="none">
            <type name="utf8" c:type="const char**"/>
          </parameter>

Without this, GI clients can't set up their own SecretAgent. I need this for the integration test suite to cover WPA2 and friends.
Comment 1 Martin Pitt 2013-04-17 11:07:15 UTC
Created attachment 241727 [details] [review]
libnm-glib: Make SecretAgent introspectable

The nm_secret_agent_*_secrets() methods are already correctly annotated, just the vfunc reference was wrong.

It seems this is not yet sufficient as the NMSecretAgentGetSecretsFunc hash-in-hash currently cannot be built from Python in a straightforward way (I'll continue to investigate that, or use D-BUS directly for now). But this at least enables the other vfuncs.
Comment 2 Martin Pitt 2013-04-19 13:20:47 UTC
Thanks for the review! I can't push to the NM git repository, so you (or some other commiter) has to push that for me.

Bug 698175 is another (and much more important) introspection fix, can that go in as well?

Thanks,

Martin
Comment 3 Dan Winship 2013-04-19 13:41:09 UTC
Attachment 241727 [details] pushed as d5fb24b - libnm-glib: Make SecretAgent introspectable